--- a/index.html
+++ b/index.html
@@ -12,32 +12,22 @@
   </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-black bg fixed-top">
             <div class="container-fluid">
-              <img src="img/logo.png" alt="" class="img-fluid outline" width="1718" height="350">
+              <img src="img/logo.png" alt="" class="img-fluid outline" width="107" height="21.5">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
+              <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+                <ul class="navbar-nav ">
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">S Series</a>
+                    <a class="nav-link al" href="#explore">S Series</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">M Series</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Trade In
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
+                    <a class="nav-link" href="#contact">Contact us</a>
                   </li>
                 </ul>
               </div>
@@ -45,60 +35,59 @@
           </nav>
     </header>
 
-    <main>
-        <main class="container-fluid">
-            <div class="row bg-black text-light py-5">
-                <div class="col-lg-4 col-sm-6 py-5">
-                      <!-- new -->
-                      <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
-                          <div class="carousel-item active" data-bs-interval="1000">
-                            <img src="https://images.samsung.com/is/image/samsung/p6pim/ie/sm-s901blvdeub/gallery/ie-galaxy-s22-s901-410796-sm-s901blvdeub-thumb-533416053?$344_344_PNG$" class="d-block w-100" alt="...">
-                          </div>
-                          <div class="carousel-item" data-bs-interval="2000">
-                            <img src="https://images.samsung.com/is/image/samsung/p6pim/in/2202/gallery/in-galaxy-s22-plus-s906-412931-sm-s906ezgginu-thumb-530963856?$344_344_PNG$" class="d-block w-100" alt="...">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="https://images.samsung.com/is/image/samsung/p6pim/sg/sm-a136blbhxsp/gallery/sg-galaxy-a13-5g-sm-a136-sm-a136blbhxsp-thumb-533546307?$344_344_PNG$" class="d-block w-100" alt="...">
-                          </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                          <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                          <span class="visually-hidden">Next</span>
-                        </button>
+    <main id="home" class="container-fluid">
+        <div class="row bg-black text-light py-5">
+            <div class="col-lg-4 col-sm-6 py-5">
+                  <!-- new -->
+                  <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active" data-bs-interval="1000">
+                        <img src="https://images.samsung.com/is/image/samsung/p6pim/ie/sm-s901blvdeub/gallery/ie-galaxy-s22-s901-410796-sm-s901blvdeub-thumb-533416053?$344_344_PNG$" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item" data-bs-interval="2000">
+                        <img src="https://images.samsung.com/is/image/samsung/p6pim/in/2202/gallery/in-galaxy-s22-plus-s906-412931-sm-s906ezgginu-thumb-530963856?$344_344_PNG$" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="https://images.samsung.com/is/image/samsung/p6pim/sg/sm-a136blbhxsp/gallery/sg-galaxy-a13-5g-sm-a136-sm-a136blbhxsp-thumb-533546307?$344_344_PNG$" class="d-block w-100" alt="...">
                       </div>
                     </div>
-                <div class="col-lg-8 col-sm-6 px-5">
-                    <!-- <div class="d-flex flex-column justify-content-center align-items-center h-100"> -->
-                        <h1><b>Galaxy S Series</b> </h1>
-                        <h4>Discover the full range of Samsung Galaxy S series. Compare models by the the specs and features that matter to you </h4>
-                    <!-- </div> -->
-                    <h1 class="display-1">OLED Displays</h1>
-                    <h2 class="display-2">120Hz Refresh Rate</h2>
-                    <h3 class="display-3">5G Connectivity</h3>
-                    <h4 class="display-4">Triple Camera</h4>
-                    <h5 class="display-5">IP68 Water Resistance</h5>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
                 </div>
+            <div class="col-lg-8 col-sm-6 px-5">
+                <!-- <div class="d-flex flex-column justify-content-center align-items-center h-100"> -->
+                    <h1><b>Galaxy S Series</b> </h1>
+                    <h4>Discover the full range of Samsung Galaxy S series. Compare models by the the specs and features that matter to you </h4>
+                <!-- </div> -->
+                <h1 class="display-1">OLED Displays</h1>
+                <h2 class="display-2">120Hz Refresh Rate</h2>
+                <h3 class="display-3">5G Connectivity</h3>
+                <h4 class="display-4">Triple Camera</h4>
+                <h5 class="display-5">IP68 Water Resistance</h5>
             </div>
-          </main>
+        </div>
+      </main>
 
-          <section id="explore">
-            <div class="row py-3 px-5">
-                <div class="col-12 text-center py-3">
-                    <h1 class="">Explore the <b>S</b> Series</h1>
-                    <p>Compare models by the the specs and features that matter to you </p>
-                </div>
-              </div>
+      <section id="explore">
+        <div class="row py-3 px-5">
+            <div class="col-12 text-center py-3">
+                <h1 class="">Explore the <b>S</b> Series</h1>
+                <p>Compare models by the the specs and features that matter to you </p>
+            </div>
+          </div>
 
-              <div id="explore-phones" class="row py-3 px-5">
-              <!-- Phones are printed here  -->
+          <div id="explore-phones" class="row py-3 px-5">
+          <!-- Phones are printed here  -->
 
-              </div>
-        </section>
+          </div>
+      </section>
 
         <section id="descrpition">
           <div class="row">
@@ -118,7 +107,7 @@
 
         
 
-    <section id="feedback">
+    <section id="contact">
       <div class="row py-5">
         <div class="col-lg-5 col-sm-12 px-5">
             <h1>Get in touch with us</h1>
