--- a/index.html
+++ b/index.html
@@ -9,25 +9,30 @@
     <!-- import font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <!-- include favicon -->
+    <link rel="shortcut icon" href="img/favicon_io/favicon.ico" type="image/x-icon">
+
   </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-black sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-black sticky-top py-3">
             <div class="container-fluid">
-              <img src="img/logo.png" alt="Samsung" class="img-fluid outline" width="107" height="21.5">
+              <a href="/">
+                <img src="img/logo.png" alt="Samsung logo" class="img-fluid outline mx-lg-5" width="107" height="21.5">
+              </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-                <ul class="navbar-nav ">
+                <ul class="navbar-nav px-lg-5 ">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active h6 mx-lg-4" aria-current="page" href="#"><i class="fas fa-home"></i> Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link al" href="#explore">S Series</a>
+                    <a class="nav-link al h6 mx-lg-4" href="#explore"><i class="fas fa-shopping-bag"></i> Explore</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact us</a>
+                    <a class="nav-link h6 mx-lg-4" href="#contact"><i class="fas fa-mail-bulk"></i> Contact us</a>
                   </li>
                 </ul>
               </div>
@@ -41,13 +46,13 @@
               <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active" data-bs-interval="5000">
-                    <img src="img/1.png"  class="d-block w-100"  alt="...">
+                    <img src="img/1.png"  class="d-block w-100"  alt="Galaxy Phone">
                   </div>
                   <div class="carousel-item" data-bs-interval="5000">
-                    <img src="img/2.png" class="d-block w-100"  alt="...">
+                    <img src="img/2.png" class="d-block w-100"  alt="Galaxy Phone">
                   </div>
                   <div class="carousel-item">
-                    <img src="img/3.png" class="d-block w-100" alt="...">
+                    <img src="img/3.png" class="d-block w-100" alt="Galaxy Phone">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -92,7 +97,7 @@
 
   <section id="specs" class="container-fluid">
     <div class="row text-white">
-      <div class="col-12 px-5 py-5">
+      <div class="col-12 px-lg-5 py-5">
         <h1 class="display-1 py-2">Samsung Galaxy S Series</h1>
         <p>The Samsung Galaxy S series is a line of flagship Android smartphone and tablet computer produced by Samsung Electronics. Together with the foldable Galaxy Z series, the lineup serves as Samsung's flagship smartphone lineup.</p>
         <table class="table border-0 text-light">
@@ -166,7 +171,7 @@
     </div>
   </section>
 
-  <section id="promotion" class="container py-5 my-5">
+  <section id="promotion" class="container py-5">
     <div class="row">
       <div id="promotion-image" class="col-lg-6 col-sm-12">
         
@@ -175,7 +180,7 @@
         <h1 class="display-6">Power your productivity with the new <b>S23 Ultra </b></h1>
         <p>Get up to $500 off with trade-in</p>
         <p>With eligible trade-in. <a href="#">Terms and conditions apply.</a></p>
-        <button class="btn btn-dark btn-outline-light rounded-3">Learn More</button>
+        <a href="#" class="btn btn-dark btn-outline-light rounded-3 btn-close-white">Learn More</a>
       </div>
     </div>
   </section>
@@ -199,13 +204,13 @@
           <form>
               <div class="mb-3">
                   <h2 class="py-3">Contact our support team</h2>
-                <label for="exampleInputEmail1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <label for="supportEmail" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="supportEmail" aria-describedby="emailHelp">
                 <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
               </div>
               <div class="mb-3">
-                  <label for="exampleInputEmail1" class="form-label">Message</label>
-                  <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <label for="supportMessage" class="form-label">Message</label>
+                  <input type="text" class="form-control" id="supportMessage" aria-describedby="emailHelp">
               </div>
               <button type="submit" class="btn btn-dark">Send</button>
             </form>
@@ -215,7 +220,7 @@
 
     <footer id="footer" class="container-fluid bg-black text-white">
       <div class="row mx-5 py-5">
-        <div class="col-lg-3 col-sm-12">
+        <div class="col-lg-3 col-sm-6">
           <ul class="list-unstyled">
             <li>About</li>
             <li>Careers</li>
@@ -224,7 +229,7 @@
             <li>Affiliates</li>
           </ul>
         </div>
-        <div class="col-lg-3 col-sm-12">
+        <div class="col-lg-3 col-sm-6">
           <ul class="list-unstyled">
             <li>Account</li>
             <li>Orders</li>
@@ -233,7 +238,7 @@
             <li>Help</li>
           </ul>
         </div>
-        <div class="col-lg-3 col-sm-12">
+        <div class="col-lg-3 col-sm-6">
           <ul class="list-unstyled">
             <li>Contact</li>
             <li>Support</li>
@@ -242,21 +247,21 @@
             <li>Terms of Use</li>
           </ul>
         </div>
-        <div class="col-lg-3 col-sm-12">
-          <img src="img/logo.png" alt="" class="img-fluid" width="107" height="21.5">
+        <div class="col-lg-3 col-sm-6">
+          <img src="img/logo.png" alt="Samsung logo" class="img-fluid" width="107" height="21.5">
           <a href="https://github.com/motiabebe">
-            <img src="https://www.logo.wine/a/logo/GitHub/GitHub-Icon-White-Dark-Background-Logo.wine.svg" alt="" class="img-fluid" width="200" height="200">
+            <img src="img/github.svg" alt="github logo" class="img-fluid" width="200" height="200">
           </a>
         </div>
       </div>
       <div class="row">
         <div class="col text-center py-3">
-          <p>&copy; 2021 Samsung. All Rights Reserved.</p>
+          <p>&copy; 2023 Samsung. All Rights Reserved.</p>
         </div>
       </div>
     </footer>
 
     <script src="js/main.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous" defer></script>
 </body>
 </html>
