--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samsung Galaxy S Series</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- import font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="css/main.css">
-    <!-- include favicon -->
     <link rel="shortcut icon" href="img/favicon_io/favicon.ico" type="image/x-icon">
 
   </head>
@@ -66,10 +64,8 @@
               </div>
             </div>
             <div class="col-lg-8 col-md-6 px-5">
-                <!-- <div class="d-flex flex-column justify-content-center align-items-center h-100"> -->
-                    <h1><b>Galaxy S Series</b> </h1>
-                    <h4>Discover the full range of Samsung Galaxy S series. Compare models by the the specs and features that matter to you </h4>
-                <!-- </div> -->
+                <h1><b>Galaxy S Series</b> </h1>
+                <h4>Discover the full range of Samsung Galaxy S series. Compare models by the the specs and features that matter to you </h4>
                 <h1 class="display-2">OLED Displays</h1>
                 <h2 class="display-3">120Hz Refresh Rate</h2>
                 <h3 class="display-4">5G Connectivity</h3>
@@ -173,21 +169,28 @@
 
   <section id="promotion" class="container py-5">
     <div class="row">
+
       <div id="promotion-image" class="col-lg-6 col-sm-12">
-        
+        <div class="d-flex flex-column justify-content-center align-items-center h-100 py-sm-5">
+          <h1 class="display-1 text-white">S23 Ultra</h1>
+          <h4 class="text-white">The most powerful Galaxy yet</h4>
+          <a href="#explore" class="btn btn-outline-light my-4 rounded-pill h6">Buy Now</a>
+        </div>
       </div>
-      <div class="col-lg-6 col-sm-12 text-center py-5 my-5">
+
+      <div class="col-lg-6 col-sm-12 text-center py-5 my-lg-5">
         <h1 class="display-6">Power your productivity with the new <b>S23 Ultra </b></h1>
         <p>Get up to $500 off with trade-in</p>
         <p>With eligible trade-in. <a href="#">Terms and conditions apply.</a></p>
         <a href="#" class="btn btn-dark btn-outline-light rounded-3 btn-close-white">Learn More</a>
       </div>
+
     </div>
   </section>
         
 
     <section id="contact" class="container-fluid">
-      <div class="row py-5">
+      <div class="row py-lg-5 py-sm-1">
         <div class="col-lg-5 col-sm-12 px-5">
             <h2 class="py-3">Frequently Asked Questions</h2>
             <h6>What is the shipping policy?</h6>
