--- a/index.html
+++ b/index.html
@@ -178,11 +178,13 @@
         </div>
       </div>
 
-      <div class="col-lg-6 col-sm-12 text-center py-5 my-lg-5">
-        <h1 class="display-6">Power your productivity with the new <b>S23 Ultra </b></h1>
-        <p>Get up to $500 off with trade-in</p>
-        <p>With eligible trade-in. <a href="#">Terms and conditions apply.</a></p>
-        <a href="#" class="btn btn-dark btn-outline-light rounded-3 btn-close-white">Learn More</a>
+      <div class="col-lg-6 col-sm-12 text-center">
+        <div class="d-flex flex-column justify-content-center align-items-center h-100 py-sm-5">
+          <h1 class="display-6">Power your productivity with the new <b>S23 Ultra </b></h1>
+          <p>Get up to $500 off with trade-in</p>
+          <p>With eligible trade-in. <a href="#">Terms and conditions apply.</a></p>
+          <a href="#" class="btn btn-dark btn-outline-light rounded-3 btn-close-white">Learn More</a>
+        </div>
       </div>
 
     </div>
