--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   <section id="promotion" class="container py-5">
     <div class="row">
 
-      <div id="promotion-image" class="col-lg-6 col-sm-12">
+      <div id="promotion-image" class="col-lg-6 col-sm-12 py-5">
         <div class="d-flex flex-column justify-content-center align-items-center h-100 py-sm-5">
           <h1 class="display-1 text-white">S23 Ultra</h1>
           <h4 class="text-white">The most powerful Galaxy yet</h4>
@@ -178,8 +178,8 @@
         </div>
       </div>
 
-      <div class="col-lg-6 col-sm-12 text-center">
-        <div class="d-flex flex-column justify-content-center align-items-center h-100 py-sm-5">
+      <div class="col-lg-6 col-sm-12 py-5">
+        <div class="d-flex flex-column text-center justify-content-center align-items-center h-100 py-sm-5">
           <h1 class="display-6">Power your productivity with the new <b>S23 Ultra </b></h1>
           <p>Get up to $500 off with trade-in</p>
           <p>With eligible trade-in. <a href="#">Terms and conditions apply.</a></p>
@@ -224,7 +224,7 @@
     </section>
 
     <footer id="footer" class="container-fluid bg-black text-white">
-      <div class="row mx-5 py-5">
+      <div class="row mx-5 py-5 my-4">
         <div class="col-lg-3 col-sm-6">
           <ul class="list-unstyled">
             <li>About</li>
